--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "elasticsearch": "^16.7.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "socket.io": "^2.3.0",
     "validator": "^13.1.1",
     "validatorjs": "^3.19.0"
   },
